<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="jp.kaleidot725.emomemo.ui.memo.EditMemoDialogViewModel" />
    </data>

    <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/title_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/memo_dialog_fragment_memo_title"
                android:textColor="@color/darkSecondaryTextColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/title_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/secondaryColor"
                android:gravity="start|top"
                android:hint="@string/memo_dialog_fragment_memo_title_hint"
                android:lines="2"
                android:text="@={viewModel.inputTitle}"
                android:textColor="@android:color/black"
                app:layout_constraintTop_toBottomOf="@id/title_text_view" />

            <Button
                android:id="@+id/success_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:backgroundTint="@color/secondaryColor"
                android:onClick="@{() -> viewModel.success()}"
                android:text="@string/memo_dialog_fragment_update"
                android:textColor="@color/primaryTextColor"
                app:layout_constraintEnd_toStartOf="@id/cancel_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_edit_text" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:backgroundTint="@color/secondaryColor"
                android:onClick="@{() -> viewModel.cancel()}"
                android:text="@string/memo_dialog_fragment_cancel"
                android:textColor="@color/primaryTextColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/success_button"
                app:layout_constraintTop_toBottomOf="@id/title_edit_text" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>
