<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="mainViewModel"
            type="jp.kaleidot725.emomemo.ui.MainViewModel" />

        <variable
            name="addNotebookViewModel"
            type="jp.kaleidot725.emomemo.ui.notebook.AddNotebookViewModel" />
    </data>

    <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/primaryColor"
        app:cardCornerRadius="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/title_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_notebook_fragment_notebook_title"
                android:textColor="@color/primaryTextColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/title_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/editTextColor"
                android:textCursorDrawable="@color/editCursorColor"
                android:gravity="start|top"
                android:hint="@string/add_notebook_fragment_notebook_title_hint"
                android:lines="2"
                android:text="@={addNotebookViewModel.title}"
                android:textColor="@color/primaryTextColor"
                app:layout_constraintTop_toBottomOf="@id/title_text_view" />

            <Button
                android:id="@+id/success_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:backgroundTint="@color/accentColor"
                android:onClick="@{() -> addNotebookViewModel.success()}"
                android:text="@string/add_notebook_fragment_create"
                android:textColor="@color/white"
                app:layout_constraintEnd_toStartOf="@id/cancel_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_edit_text" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:backgroundTint="@color/accentColor"
                android:onClick="@{() -> addNotebookViewModel.cancel()}"
                android:text="@string/add_notebook_fragment_cancel"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/success_button"
                app:layout_constraintTop_toBottomOf="@id/title_edit_text" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>
