<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="mainViewModel"
            type="jp.kaleidot725.emomemo.ui.MainViewModel" />

        <variable
            name="deleteNotebookViewModel"
            type="jp.kaleidot725.emomemo.ui.notebook.DeleteNotebookViewModel" />
    </data>

    <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/primaryColor"
        app:cardCornerRadius="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/title_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_notebook_fragment_notebook_title"
                android:textColor="@color/primaryTextColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/notebook_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                app:layout_constraintTop_toBottomOf="@id/title_text_view" />

            <Button
                android:id="@+id/success_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:backgroundTint="@color/accentColor"
                android:onClick="@{() -> deleteNotebookViewModel.success()}"
                android:text="@string/delete_notebook_fragment_delete"
                android:textColor="@color/primaryTextColor"
                app:layout_constraintEnd_toStartOf="@id/cancel_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/notebook_spinner" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:backgroundTint="@color/accentColor"
                android:onClick="@{() -> deleteNotebookViewModel.cancel()}"
                android:text="@string/delete_notebook_fragment_cancel"
                android:textColor="@color/primaryTextColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/success_button"
                app:layout_constraintTop_toBottomOf="@id/notebook_spinner" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>
